Submitting mulit-values works. List all shows correct list based on logged in user.

--- a/templates/collection_record/collection_record/add.html
+++ b/templates/collection_record/collection_record/add.html
@@ -73,7 +73,6 @@
             {% endif %}
             <label class="span-5">{{form.content.label}}</label>
                 {{form.content}}
-                {{form.term}}{{form.qualifier}}
             </div>
             {% endfor %}
         </fieldset>
@@ -87,7 +86,6 @@
             {% endif %}
             <label class="span-5">{{form.content.label}}</label>
                 {{form.content}}
-                {{form.term}}{{form.qualifier}}
             </div>
             {% endfor %}
         </fieldset>
@@ -101,7 +99,6 @@
             {% endif %}
             <label class="span-5">{{form.content.label}}</label>
                 {{form.content}}
-                {{form.term}}{{form.qualifier}}
             </div>
             {% endfor %}
         </fieldset>
@@ -118,7 +115,6 @@
             {% endif %}
             <label class="span-5">{{form.content.label}}</label>
                 {{form.content}}
-                {{form.term}}{{form.qualifier}}
             </div>
             {% endfor %}
         </fieldset>
@@ -132,7 +128,6 @@
             {% endif %}
             <label class="span-5">{{form.content.label}}</label>
                 {{form.content}}
-                {{form.term}}{{form.qualifier}}
             </div>
             {% endfor %}
         </fieldset>
@@ -146,7 +141,6 @@
             {% endif %}
             <label class="span-5">{{form.content.label}}</label>
                 {{form.content}}
-                {{form.term}}{{form.qualifier}}
             </div>
             {% endfor %}
         </fieldset>
@@ -160,7 +154,6 @@
             {% endif %}
             <label class="span-5">{{form.content.label}}</label>
                 {{form.content}}
-                {{form.term}}{{form.qualifier}}
             </div>
             {% endfor %}
         </fieldset>
@@ -174,7 +167,6 @@
             {% endif %}
             <label class="span-5">{{form.content.label}}</label>
                 {{form.content}}
-                {{form.term}}{{form.qualifier}}
             </div>
            {% endfor %}
         </fieldset>
@@ -188,7 +180,6 @@
             {% endif %}
             <label class="span-5">{{form.content.label}}</label>
                 {{form.content}}
-                {{form.term}}{{form.qualifier}}
             </div>
             {% endfor %}
         </fieldset>
@@ -202,7 +193,6 @@
             {% endif %}
             <label class="span-5">{{form.content.label}}</label>
                 {{form.content}}
-                {{form.term}}{{form.qualifier}}
             </div>
             {% endfor %}
         </fieldset>
@@ -216,7 +206,6 @@
             {% endif %}
             <label class="span-5">{{form.content.label}}</label>
                 {{form.content}}
-                {{form.term}}{{form.qualifier}}
             </div>
             {% endfor %}
         </fieldset>
@@ -230,65 +219,61 @@
             {% endif %}
             <label class="span-5">{{form.content.label}}</label>
                 {{form.content}}
-                {{form.term}}{{form.qualifier}}
             </div>
             {% endfor %}
         </fieldset>
         <input name="submit" type="submit" value="Preview record"/>
         </form>
-    </div>
-</div>
 <script type="text/javascript">
     $(function() {
         $('#id_fieldset_persname div').formset({
             formCssClass: 'dynamic-fieldset-form',
-            prefix: "person_form"
+            prefix: "{{formset_person.prefix}}"
         });
         $('#id_fieldset_familyname div').formset({
             formCssClass: 'dynamic-fieldset-form',
-            prefix: "family_form"
+            prefix: "{{formset_family.prefix}}"
         });
         $('#id_fieldset_orgname div').formset({
             formCssClass: 'dynamic-fieldset-form',
-            prefix: "org_form"
+            prefix: "{{formset_organization.prefix}}"
         });
         $('#id_fieldset_topic div').formset({
             formCssClass: 'dynamic-fieldset-form',
-            prefix: "topic_form"
+            prefix: "{{formset_topic.prefix}}"
         });
         $('#id_fieldset_subject_person_name div').formset({
             formCssClass: 'dynamic-fieldset-form',
-            prefix: "subject_person_name_form"
+            prefix: "{{formset_subject_person_name.prefix}}"
         });
         $('#id_fieldset_subject_family_name div').formset({
             formCssClass: 'dynamic-fieldset-form',
-            prefix: "subject_family_name_form"
+            prefix: "{{formset_subject_family_name.prefix}}"
         });
         $('#id_fieldset_subject_organization_name div').formset({
             formCssClass: 'dynamic-fieldset-form',
-            prefix: "subject_organization_name_form"
+            prefix: "{{formset_subject_organization_name.prefix}}"
         });
         $('#id_fieldset_geog div').formset({
             formCssClass: 'dynamic-fieldset-form',
-            prefix: "geog_form"
+            prefix: "{{formset_geog.prefix}}"
         });
         $('#id_fieldset_genre div').formset({
             formCssClass: 'dynamic-fieldset-form',
-            prefix: "genre_form"
+            prefix: "{{formset_genre.prefix}}"
         });
         $('#id_fieldset_subject_title div').formset({
             formCssClass: 'dynamic-fieldset-form',
-            prefix: "subject_title_form"
+            prefix: "{{formset_subject_title.prefix}}"
         });
         $('#id_fieldset_subject_function div').formset({
             formCssClass: 'dynamic-fieldset-form',
-            prefix: "subject_function_form"
+            prefix: "{{formset_subject_function.prefix}}"
         });
         $('#id_fieldset_subject_occupation div').formset({
             formCssClass: 'dynamic-fieldset-form',
-            prefix: "subject_occupation_form"
+            prefix: "{{formset_subject_occupation.prefix}}"
         });
     });
 </script>
-
 {%endblock bodycontent%}
