--- a/templates/collection_record/collection_record/add.html
+++ b/templates/collection_record/collection_record/add.html
@@ -46,18 +46,20 @@
 <form action="" method="POST">
     {%csrf_token%}
     <fieldset>
+        {% if form_main.errors %}<h3 class="orangetext" style="background-color:yellow;">Please fix the errors below</h3>{%endif%}
         <input style="float:right" name="submit" type="submit" value="Preview record"/>
         <h3>Basic Information</h3>
         <h5 class="orangetext">* indicates required field</h5>
         {%for field in form_main%}
-        <div class="span-23">
+        <div class="span-23" {%if field.errors%}style="background-color:yellow;"{%endif%}>
         <span class="span-5"><label for="{{form.id}}">
-            {%for err in field.errors %}
-                <span class="errorlist">{{err}}</span>
-            {% endfor %}
             {{field.label}}{%if field.field.required %}<span class="orangetext">*</span>{%endif%}</label>
         </span>
-        <span class="span-18 last">{{field}}&nbsp;{{field.help_text}}</span>
+        <span class="span-18 last">{{field}}&nbsp;{{field.help_text}}
+            {%for err in field.errors %}
+                <span class="errorlist">{{err}}</span>
+                {% endfor %}
+        </span>
 </div>
         {% endfor %}
     </fieldset>
