Can add/remove associated DC terms in "buckets". Need to deal with missing buckets.

--- a/templates/collection_record/collection_record/edit.html
+++ b/templates/collection_record/collection_record/edit.html
@@ -78,6 +78,7 @@
             <span class='hide'>{{form.id}}{{form.term}}{{form.qualifier}}</span>
             <label class="span-5">{{form.content.label}}</label>
                 {{form.content}}
+                {{form.DELETE}}
             </div>
             {% endfor %}
         </fieldset>
@@ -92,6 +93,7 @@
             <span class='hide'>{{form.id}}{{form.term}}{{form.qualifier}}</span>
             <label class="span-5">{{form.content.label}}</label>
                 {{form.content}}
+                {{form.DELETE}}
             </div>
             {% endfor %}
         </fieldset>
@@ -106,6 +108,7 @@
             <span class='hide'>{{form.id}}{{form.term}}{{form.qualifier}}</span>
             <label class="span-5">{{form.content.label}}</label>
                 {{form.content}}
+                {{form.DELETE}}
             </div>
             {% endfor %}
         </fieldset>
@@ -123,6 +126,7 @@
             <span class='hide'>{{form.id}}{{form.term}}{{form.qualifier}}</span>
             <label class="span-5">{{form.content.label}}</label>
                 {{form.content}}
+                {{form.DELETE}}
             </div>
             {% endfor %}
         </fieldset>
@@ -137,6 +141,7 @@
             <span class='hide'>{{form.id}}{{form.term}}{{form.qualifier}}</span>
             <label class="span-5">{{form.content.label}}</label>
                 {{form.content}}
+                {{form.DELETE}}
             </div>
             {% endfor %}
         </fieldset>
@@ -151,6 +156,7 @@
             <span class='hide'>{{form.id}}{{form.term}}{{form.qualifier}}</span>
             <label class="span-5">{{form.content.label}}</label>
                 {{form.content}}
+                {{form.DELETE}}
             </div>
             {% endfor %}
         </fieldset>
@@ -165,6 +171,7 @@
             <span class='hide'>{{form.id}}{{form.term}}{{form.qualifier}}</span>
             <label class="span-5">{{form.content.label}}</label>
                 {{form.content}}
+                {{form.DELETE}}
             </div>
             {% endfor %}
         </fieldset>
@@ -179,6 +186,7 @@
             <span class='hide'>{{form.id}}{{form.term}}{{form.qualifier}}</span>
             <label class="span-5">{{form.content.label}}</label>
                 {{form.content}}
+                {{form.DELETE}}
             </div>
            {% endfor %}
         </fieldset>
@@ -193,6 +201,7 @@
             <span class='hide'>{{form.id}}{{form.term}}{{form.qualifier}}</span>
             <label class="span-5">{{form.content.label}}</label>
                 {{form.content}}
+                {{form.DELETE}}
             </div>
             {% endfor %}
         </fieldset>
@@ -207,6 +216,7 @@
             <span class='hide'>{{form.id}}{{form.term}}{{form.qualifier}}</span>
             <label class="span-5">{{form.content.label}}</label>
                 {{form.content}}
+                {{form.DELETE}}
             </div>
             {% endfor %}
         </fieldset>
@@ -221,6 +231,7 @@
             <span class='hide'>{{form.id}}{{form.term}}{{form.qualifier}}</span>
             <label class="span-5">{{form.content.label}}</label>
                 {{form.content}}
+                {{form.DELETE}}
             </div>
             {% endfor %}
         </fieldset>
@@ -235,6 +246,7 @@
             <span class="hide">{{form.id}}{{form.term}}{{form.qualifier}}</span>
             <label class="span-5">{{form.content.label}}</label>
                 {{form.content}}
+                {{form.DELETE}}
             </div>
             {% endfor %}
         </fieldset>
