change wording for review page.

--- a/templates/collection_record/collection_record/add_preview.html
+++ b/templates/collection_record/collection_record/add_preview.html
@@ -1,6 +1,6 @@
 {% extends 'collection_record/collection_record/edit.html' %}
 
-{%block bodytitle%}<h1>Preview the Collection Record to add to the OAC</h1>{%endblock bodytitle%}
+{%block bodytitle%}<h1>Please review your entered data before creating the Collection Record</h1>{%endblock bodytitle%}
         
 {%block submit_top %}<input style="float:right" name="submit" type="submit" value="Create record"/><input type="hidden" name="previewed" value="true" />{%endblock submit_top %}
 
