--- a/templates/collection_record/collection_record/edit.html
+++ b/templates/collection_record/collection_record/edit.html
@@ -27,6 +27,9 @@
   .orangetext {
       color: #C2492C;
   }
+  .errorbox {
+    background-color:yellow;
+}
 </style>
 
 <script type="text/javascript" src="/site_media/js/jquery-1.3.2.min.js"></script>
@@ -48,7 +51,7 @@
 <form action="" method="POST">
     {%csrf_token%}
     <fieldset>
-        {% if form_main.errors %}<h3 class="orangetext" style="background-color:yellow;">Please fix the errors below -- {{form_main.errors}}</h3>{%endif%}
+        {% if form_main.errors or formset_errors %}<h3 class="orangetext errorbox">Please fix the errors below -- {{form_main.errors}}</h3>{%endif%}
         {% block submit_top %}
         <input style="float:right" name="submit" type="submit" value="Update record"/>
         {% endblock submit_top %}
@@ -73,7 +76,7 @@
             <h4>Personal Names</h4>
             {{ formset_person.management_form }}
             {% for form in formset_person %}
-            <div>
+            <div {% if form.errors %}class="errorbox"{%endif%}>
             {% if form.errors %}
                 <span class="errorlist">{{form.errors}}</span>
             {% endif %}
@@ -88,7 +91,7 @@
             <h4>Family Names</h4>
             {{ formset_family.management_form }}
             {% for form in formset_family %}
-            <div>
+            <div {% if form.errors %}class="errorbox"{%endif%}>
             {% if form.errors %}
                 <span class="errorlist">{{form.errors}}</span>
             {% endif %}
@@ -103,7 +106,7 @@
             <h4>Organization Names</h4>
             {{ formset_organization.management_form }}
             {% for form in formset_organization %}
-            <div>
+            <div {% if form.errors %}class="errorbox"{%endif%}>
             {% if form.errors %}
                 <span class="errorlist">{{form.errors}}</span>
             {% endif %}
@@ -121,7 +124,7 @@
             <h4>Topics</h4>
             {{ formset_topic.management_form }}
             {% for form in formset_topic %}
-            <div>
+            <div {% if form.errors %}class="errorbox"{%endif%}>
             {% if form.errors %}
                 <span class="errorlist">{{form.errors}}</span>
             {% endif %}
@@ -136,7 +139,7 @@
             <h4>Personal Names</h4>
             {{ formset_subject_person_name.management_form }}
             {% for form in formset_subject_person_name %}
-            <div>
+            <div {% if form.errors %}class="errorbox"{%endif%}>
             {% if form.errors %}
                 <span class="errorlist">{{form.errors}}</span>
             {% endif %}
@@ -151,7 +154,7 @@
             <h4>Family Names</h4>
             {{ formset_subject_family_name.management_form }}
             {% for form in formset_subject_family_name %}
-            <div>
+            <div {% if form.errors %}class="errorbox"{%endif%}>
             {% if form.errors %}
                 <span class="errorlist">{{form.errors}}</span>
             {% endif %}
@@ -166,7 +169,7 @@
             <h4>Organization Names</h4>
             {{ formset_subject_organization_name.management_form }}
             {% for form in formset_subject_organization_name %}
-            <div>
+            <div {% if form.errors %}class="errorbox"{%endif%}>
             {% if form.errors %}
                 <span class="errorlist">{{form.errors}}</span>
             {% endif %}
@@ -181,7 +184,7 @@
             <h4>Geographical Locations</h4>
             {{ formset_geog.management_form }}
             {% for form in formset_geog %}
-            <div>
+            <div {% if form.errors %}class="errorbox"{%endif%}>
             {% if form.errors %}
                 <span class="errorlist">{{form.errors}}</span>
             {% endif %}
@@ -196,7 +199,7 @@
             <h4>Form/Genres of Materials</h4>
             {{ formset_genre.management_form }}
             {% for form in formset_genre %}
-            <div>
+            <div {% if form.errors %}class="errorbox"{%endif%}>
             {% if form.errors %}
                 <span class="errorlist">{{form.errors}}</span>
             {% endif %}
@@ -211,7 +214,7 @@
             <h4>Titles</h4>
             {{ formset_subject_title.management_form }}
             {% for form in formset_subject_title %}
-            <div>
+            <div {% if form.errors %}class="errorbox"{%endif%}>
             {% if form.errors %}
                 <span class="errorlist">{{form.errors}}</span>
             {% endif %}
@@ -226,7 +229,7 @@
             <h4>Functions</h4>
             {{ formset_subject_function.management_form }}
             {% for form in formset_subject_function %}
-            <div>
+            <div {% if form.errors %}class="errorbox"{%endif%}>
             {% if form.errors %}
                 <span class="errorlist">{{form.errors}}</span>
             {% endif %}
@@ -241,7 +244,7 @@
             <h4>Occupations</h4>
             {{ formset_subject_occupation.management_form }}
             {% for form in formset_subject_occupation %}
-            <div>
+            <div {% if form.errors %}class="errorbox"{%endif%}>
             {% if form.errors %}
                 <span class="errorlist">{{form.errors}}</span>
             {% endif %}
