--- a/templates/collection_record/collection_record/edit.html
+++ b/templates/collection_record/collection_record/edit.html
@@ -24,15 +24,19 @@
     height: 40px;
     vertical-align: bottom;
     }
-  .orangetext {
+ .orangetext {
       color: #C2492C;
-  }
-  .errorbox {
+ }
+ .errorbox {
     background-color:yellow;
-}
-    .empty-form {
+ }
+ .empty-form {
         display:none;
-    }
+ }
+ .dynamic-fieldset-form textarea {
+        width:40em;
+        height:1.3em;
+ }
 </style>
 
 <script type="text/javascript" src="/site_media/js/jquery-1.3.2.min.js"></script>
@@ -44,7 +48,7 @@
 {%endblock extrahead %}
 
 {%block bodycontent%}
-{% if collection_record %}<a style="float:right;background-color:#C2492C;color:white;border-radius:10px;font-size:30px;margin:5px;text-decoration:none;padding:5px;" href="./oac/">View</a>
+{% if collection_record %}<a style="float:right;background-color:#C2492C;color:white;border-radius:10px;font-size:30px;margin:5px;text-decoration:none;padding:5px;" href="{{collection_record.get_absolute_url|safe}}">View</a>
     {% endif %}
 <div class="container" id="bodycontainer">
     <div class="area span-24 pageheader">
