--- a/templates/collection_record/collection_record/edit.html
+++ b/templates/collection_record/collection_record/edit.html
@@ -37,6 +37,18 @@
         width:40em;
         height:1.3em;
  }
+ .button {
+    float:right;
+    background-color:#C2492C;
+    color:white;
+    border-radius:10px;
+    font-size:30px;
+    margin:5px;
+    text-decoration:none;
+    padding:7px;
+    vertical-align:baseline;
+    line-height:1.5;
+}
 </style>
 
 <script type="text/javascript" src="/site_media/js/jquery-1.3.2.min.js"></script>
@@ -48,7 +60,7 @@
 {%endblock extrahead %}
 
 {%block bodycontent%}
-{% if collection_record %}<a style="float:right;background-color:#C2492C;color:white;border-radius:10px;font-size:30px;margin:5px;text-decoration:none;padding:5px;" href="{{collection_record.get_absolute_url|safe}}">View</a>
+{% if collection_record %}<a class="button" href="{{collection_record.get_absolute_url|safe}}">View</a>
     {% endif %}
 <div class="container" id="bodycontainer">
     <div class="area span-24 pageheader">
