Can add blank form to files section.

--- a/templates/collection_record/collection_record/add_preview.html
+++ b/templates/collection_record/collection_record/add_preview.html
@@ -1,7 +1,13 @@
 {% extends 'collection_record/collection_record/edit.html' %}
 
+{%block uploader_head%}{%endblock uploader_head%}
+
 {%block bodytitle%}<h1>Please review your entered data before creating the Collection Record</h1>{%endblock bodytitle%}
         
 {%block submit_top %}<input style="float:right" name="submit" type="submit" value="Create record"/><input type="hidden" name="previewed" value="true" />{%endblock submit_top %}
 
 {%block submit_bottom%}<input style="float:right" name="submit" type="submit" value="Create record"/><input type="hidden" name="previewed" value="true" />{%endblock submit_bottom%}
+
+{%block supplemental_files%}{%endblock supplemental_files%}
+{%block uploader%}{%endblock uploader%}
+{%block uploader_footer%}{%endblock uploader_footer%}
